Fix z-index carousel hover issue and adjust padding between sections

--- a/src/styles/animation/_animation.scss
+++ b/src/styles/animation/_animation.scss
@@ -68,8 +68,6 @@
 
 
     &.mc-animation--animating {
-      z-index: 1;
-
       .mc-tile__content {
         top: -16px;
         left: -32px;
